--- a/index.html
+++ b/index.html
@@ -3,28 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ESG Analysis App</title>
+    <title>ESG Analysis Application</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
-    <h1>ESG Analysis Dashboard</h1>
-    <div id="data-input">
-        <h2>Enter ESG Data</h2>
-        <label for="environmental">Environmental Score:</label>
-        <input type="number" id="environmental" placeholder="Enter value 0-100">
-        <br>
-        <label for="social">Social Score:</label>
-        <input type="number" id="social" placeholder="Enter value 0-100">
-        <br>
-        <label for="governance">Governance Score:</label>
-        <input type="number" id="governance" placeholder="Enter value 0-100">
-        <br>
-        <button onclick="calculateESG()">Calculate ESG Score</button>
-    </div>
-    <div id="result">
-        <h2>ESG Score:</h2>
-        <p id="esg-score"></p>
-    </div>
-    <script src="script.js"></script>
+    <header>
+        <h1>ESG Analysis Application</h1>
+    </header>
+
+    <main>
+        <section id="esg-calculation">
+            <h2>ESG Calculation</h2>
+            <form id="esg-form">
+                <label for="data-input">Enter your data:</label>
+                <input type="text" id="data-input" placeholder="Enter data for analysis" required>
+                <button type="submit">Calculate ESG</button>
+            </form>
+            <div id="esg-result"></div>
+        </section>
+
+        <section id="graphs">
+            <h2>Graphs</h2>
+            <div id="graph-container">
+                <!-- Graphs will be rendered here -->
+            </div>
+        </section>
+
+        <section id="chatbot">
+            <h2>Chatbot for Analysis</h2>
+            <div id="chatbot-container">
+                <!-- Chatbot will be integrated here -->
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 ESG Analysis Application</p>
+    </footer>
 </body>
 </html>
