--- a/index.html
+++ b/index.html
@@ -24,9 +24,12 @@
         </section>
 
         <section id="info">
-            <h2>About ESG</h2>
-            <p>ESG stands for Environmental, Social, and Governance. This framework helps in assessing the sustainability and societal impact of investments...</p>
-        </section>
+    <h2>ESG Analysis Overview</h2>
+    <p><strong>Environmental Impact:</strong> The Environmental Score evaluates a company’s commitment to preserving natural resources, managing waste, reducing emissions, and utilizing renewable energy. It reflects a company’s responsibility towards mitigating climate change and environmental degradation.</p>
+    <p><strong>Social Responsibility:</strong> The Social Score highlights a company’s impact on its employees, customers, and communities. It measures factors like employee satisfaction, community engagement, health and safety, and workforce diversity.</p>
+    <p><strong>Governance Policies:</strong> The Governance Score measures a company’s adherence to ethical business practices, transparency, and strong leadership. It focuses on board diversity, executive compensation, anti-corruption policies, and shareholder rights.</p>
+</section>
+
 
         <section id="esg-calculation">
             <h2>ESG Calculation</h2>
