--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
     <p><strong>Governance Policies:</strong> The Governance Score measures a company’s adherence to ethical business practices, transparency, and strong leadership. It focuses on board diversity, executive compensation, anti-corruption policies, and shareholder rights.</p>
 </section>
 
+        <div class="esg-section">
+    <h2>Get ESG Rating</h2>
+    <input type="text" id="companyName" placeholder="Enter Company Name">
+    <button onclick="fetchESGData()">Get ESG Rating</button>
+    <div id="esgResult"></div>
+</div>
+
 
 
         <<script src="//code.tidio.co/khxk1hmdarkhdxb5nvqmwepeou0wwibf.js" async></script>>
