--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ESG Matrices Dashboard</title>
     <link rel="stylesheet" href="style.css">
+    
+    <!-- Include PapaParse for parsing CSV data -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
+    
+    <!-- Link to your custom JavaScript file where fetchESGData function is defined -->
     <script src="script.js" defer></script>
 </head>
 <body>
@@ -24,24 +29,21 @@
         </section>
 
         <section id="info">
-    <h2>ESG Analysis Overview</h2>
-    <p><strong>Environmental Impact:</strong> The Environmental Score evaluates a company’s commitment to preserving natural resources, managing waste, reducing emissions, and utilizing renewable energy. It reflects a company’s responsibility towards mitigating climate change and environmental degradation.</p>
-    <p><strong>Social Responsibility:</strong> The Social Score highlights a company’s impact on its employees, customers, and communities. It measures factors like employee satisfaction, community engagement, health and safety, and workforce diversity.</p>
-    <p><strong>Governance Policies:</strong> The Governance Score measures a company’s adherence to ethical business practices, transparency, and strong leadership. It focuses on board diversity, executive compensation, anti-corruption policies, and shareholder rights.</p>
-</section>
+            <h2>ESG Analysis Overview</h2>
+            <p><strong>Environmental Impact:</strong> The Environmental Score evaluates a company’s commitment to preserving natural resources, managing waste, reducing emissions, and utilizing renewable energy. It reflects a company’s responsibility towards mitigating climate change and environmental degradation.</p>
+            <p><strong>Social Responsibility:</strong> The Social Score highlights a company’s impact on its employees, customers, and communities. It measures factors like employee satisfaction, community engagement, health and safety, and workforce diversity.</p>
+            <p><strong>Governance Policies:</strong> The Governance Score measures a company’s adherence to ethical business practices, transparency, and strong leadership. It focuses on board diversity, executive compensation, anti-corruption policies, and shareholder rights.</p>
+        </section>
 
         <div class="esg-section">
-    <h2>Get ESG Rating</h2>
-    <input type="text" id="companyName" placeholder="Enter Company Name">
-    <button onclick="fetchESGData()">Get ESG Rating</button>
-    <div id="esgResult"></div>
-</div>
+            <h2>Get ESG Rating</h2>
+            <input type="text" id="companyName" placeholder="Enter Company Name">
+            <button onclick="fetchESGData()">Get ESG Rating</button>
+            <div id="esgResult"></div>
+        </div>
 
-
-
-        <<script src="//code.tidio.co/khxk1hmdarkhdxb5nvqmwepeou0wwibf.js" async></script>>
-
-
+        <!-- Tidio Chat Script -->
+        <script src="//code.tidio.co/khxk1hmdarkhdxb5nvqmwepeou0wwibf.js" async></script>
     </main>
 
     <footer>
@@ -50,4 +52,3 @@
     </footer>
 </body>
 </html>
-
