--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <script src="script.js" defer></script>
     
     <!-- Include Chart.js for the graph -->
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> 
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <header>
