--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
 
         <section id="info">
             <h2>ESG Analysis Overview</h2>
-            <p class="justified-text"><strong>Environmental Impact:</strong> The Environmental Score evaluates a company’s commitment to preserving natural resources, managing waste, reducing emissions, and utilizing renewable energy. It reflects a company’s responsibility towards mitigating climate change and environmental degradation.</p>
-            <p class="justified-text"><strong>Social Responsibility:</strong> The Social Score highlights a company’s impact on its employees, customers, and communities. It measures factors like employee satisfaction, community engagement, health and safety, and workforce diversity.</p>
-            <p class="justified-text"><strong>Governance Policies:</strong> The Governance Score measures a company’s adherence to ethical business practices, transparency, and strong leadership. It focuses on board diversity, executive compensation, anti-corruption policies, and shareholder rights.</p>
+            <div class="overview-section">
+                <p><strong>Environmental Impact:</strong> The Environmental Score evaluates a company’s commitment to preserving natural resources, managing waste, reducing emissions, and utilizing renewable energy. It reflects a company’s responsibility towards mitigating climate change and environmental degradation.</p>
+                <p><strong>Social Responsibility:</strong> The Social Score highlights a company’s impact on its employees, customers, and communities. It measures factors like employee satisfaction, community engagement, health and safety, and workforce diversity.</p>
+                <p><strong>Governance Policies:</strong> The Governance Score measures a company’s adherence to ethical business practices, transparency, and strong leadership. It focuses on board diversity, executive compensation, anti-corruption policies, and shareholder rights.</p>
+            </div>
         </section>
 
         <div class="esg-section">
@@ -49,7 +51,7 @@
 
         <!-- Chart container (Initially hidden) -->
         <div id="chartContainer" style="display: none;">
-            <canvas id="esgChart" width="400" height="200"></canvas>
+            <canvas id="esgChart" width="300" height="150"></canvas>
         </div>
 
         <!-- Tidio Chat Script -->
