--- a/index.html
+++ b/index.html
@@ -42,13 +42,16 @@
             </div>
         </section>
 
-        <div class="esg-section">
-              <h2>Get ESG Rating</h2>
-              <input type="text" id="companyName" placeholder="Enter Company Name" oninput="showSuggestions()" autocomplete="off">
-              <div id="suggestions" class="suggestions-box"></div> <!-- Container for autocomplete suggestions -->
-              <button onclick="fetchESGData()">Get ESG Rating</button>
-              <div id="esgResult"></div>
-        </div>
+      <div class="suggestions"></div>
+
+          <input type="text" id="companyName" placeholder="Type company name">
+
+          <div id="esgResult"></div>
+
+          <div id="chartContainer" style="display: none;">
+             <canvas id="esgChart"></canvas>
+     </div>
+
 
 
         <!-- Chart container (Initially hidden) -->
