--- a/index.html
+++ b/index.html
@@ -25,12 +25,22 @@
     </header>
 
     <main>
-        <!-- Hero Section -->
-        <section id="hero" class="hero-section">
+        <!-- Home Section -->
+        <section id="home" class="hero-section">
             <h1>ESG MATRICES DASHBOARD</h1>
+            <p>Welcome to the ESG Matrices Dashboard, where sustainability data meets actionable insights. Explore, analyze, and make informed decisions based on Environmental, Social, and Governance (ESG) metrics.</p>
         </section>
 
-        <!-- Overview Section -->
+        <!-- About Section -->
+        <section id="about" class="about-section">
+            <h2>About Us</h2>
+            <p><strong>Our Commitment to ESG Transparency and Insights</strong></p>
+            <p>We are a team of passionate individuals dedicated to promoting sustainable business practices through transparent Environmental, Social, and Governance (ESG) metrics. Our mission is to empower users with reliable data and insights, helping them make informed decisions to drive positive change.</p>
+            <p>By leveraging real-time data and interactive visualizations, we strive to present a clear picture of corporate responsibility and its effect on the global community.</p>
+            <p>Through this platform, we aim to bridge the gap between complex ESG data and easy-to-understand visual insights. Whether you’re an investor, a business professional, or a curious individual, our goal is to support you in making data-driven decisions for a more sustainable future.</p>
+        </section>
+
+        <!-- ESG Analysis Overview Section -->
         <section id="info">
             <h2>ESG Analysis Overview</h2>
             <div class="overview-section">
