--- a/index.html
+++ b/index.html
@@ -17,21 +17,22 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#hero">Home</a></li> <!-- Updated link to #hero -->
-                <li><a href="#about">About</a></li>
-                <li><a href="#reports">Reports</a></li>
+                <li><a href="javascript:void(0);" onclick="showHome()">Home</a></li>
+                <li><a href="javascript:void(0);" onclick="showSection('about')">About</a></li>
+                <li><a href="javascript:void(0);" onclick="showSection('reports')">Reports</a></li>
+                <li><a href="javascript:void(0);" onclick="showSection('search')">Search</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <!-- Hero Section -->
-        <section id="hero" class="hero-section">
+        <!-- Hero Section (Home) -->
+        <section id="home" class="hero-section">
             <h1>ESG MATRICES DASHBOARD</h1>
         </section>
 
-        <!-- Overview Section -->
-        <section id="info">
+        <!-- Overview Section (About) -->
+        <section id="about" style="display: none;">
             <h2>ESG Analysis Overview</h2>
             <div class="overview-section">
                 <p><strong>Environmental Impact:</strong> The Environmental Score evaluates a company’s commitment to preserving natural resources, managing waste, reducing emissions, and utilizing renewable energy.</p>
@@ -41,7 +42,7 @@
         </section>
 
         <!-- Search Section -->
-        <section id="search">
+        <section id="search" style="display: none;">
             <h2>Search ESG Data</h2>
             <input type="text" id="companyName" placeholder="Type company name" autocomplete="off">
             <div class="suggestions">
@@ -51,13 +52,13 @@
             <div id="esgResult"></div>
         </section>
 
-        <!-- Chart Section -->
+        <!-- Chart Section (Hidden initially) -->
         <div id="chartContainer" style="display: none;">
             <canvas id="esgChart" width="400" height="200"></canvas>
         </div>
 
         <!-- Reports Section -->
-        <section id="reports">
+        <section id="reports" style="display: none;">
             <h2>ESG Reports</h2>
             <div class="report-card">
                 <h3>Sustainalytics ESG Ratings</h3>
@@ -96,5 +97,24 @@
     </footer>
 
     <script src="script.js"></script>
+    <script>
+        function showHome() {
+            document.getElementById('home').style.display = 'block';
+            document.getElementById('about').style.display = 'none';
+            document.getElementById('reports').style.display = 'none';
+            document.getElementById('search').style.display = 'none';
+        }
+
+        function showSection(sectionId) {
+            // Hide all sections first
+            document.getElementById('home').style.display = 'none';
+            document.getElementById('about').style.display = 'none';
+            document.getElementById('reports').style.display = 'none';
+            document.getElementById('search').style.display = 'none';
+
+            // Show the selected section
+            document.getElementById(sectionId).style.display = 'block';
+        }
+    </script>
 </body>
 </html>
