--- a/index.html
+++ b/index.html
@@ -17,43 +17,47 @@
     <header>
         <nav>
             <ul>
-                <li><a href="javascript:void(0);" onclick="showHome()">Home</a></li>
-                <li><a href="javascript:void(0);" onclick="showSection('about')">About</a></li>
-                <li><a href="javascript:void(0);" onclick="showSection('search')">Search</a></li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#reports">Reports</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <!-- Hero Section (Home) -->
-        <section id="home" class="hero-section">
+        <!-- Hero Section -->
+        <section id="hero" class="hero-section">
             <h1>ESG MATRICES DASHBOARD</h1>
+        </section>
+
+        <!-- Overview Section -->
+        <section id="info">
+            <h2>ESG Analysis Overview</h2>
             <div class="overview-section">
-                <h2>ESG Analysis Overview</h2>
                 <p><strong>Environmental Impact:</strong> The Environmental Score evaluates a company’s commitment to preserving natural resources, managing waste, reducing emissions, and utilizing renewable energy.</p>
                 <p><strong>Social Responsibility:</strong> The Social Score highlights a company’s impact on its employees, customers, and communities, measuring factors like employee satisfaction, health and safety, and workforce diversity.</p>
                 <p><strong>Governance Policies:</strong> The Governance Score focuses on ethical business practices, transparency, and strong leadership.</p>
             </div>
-
-            <!-- Search Section -->
-            <section id="search">
-                <h2>Search ESG Data</h2>
-                <input type="text" id="companyName" placeholder="Type company name" autocomplete="off">
-                <div class="suggestions">
-                    <ul id="suggestions" class="suggestions-list"></ul>
-                </div>
-                <button onclick="fetchESGData()">Search</button>
-                <div id="esgResult"></div>
-            </section>
         </section>
 
-        <!-- Chart Section (Hidden initially) -->
+        <!-- Search Section -->
+        <section id="search">
+            <h2>Search ESG Data</h2>
+            <input type="text" id="companyName" placeholder="Type company name" autocomplete="off">
+            <div class="suggestions">
+                <ul id="suggestions" class="suggestions-list"></ul>
+            </div>
+            <button onclick="fetchESGData()">Search</button>
+            <div id="esgResult"></div>
+        </section>
+
+        <!-- Chart Section -->
         <div id="chartContainer" style="display: none;">
             <canvas id="esgChart" width="400" height="200"></canvas>
         </div>
 
-        <!-- Reports Section (Hidden) -->
-        <section id="reports" style="display: none;">
+        <!-- Reports Section -->
+        <section id="reports">
             <h2>ESG Reports</h2>
             <div class="report-card">
                 <h3>Sustainalytics ESG Ratings</h3>
@@ -92,24 +96,5 @@
     </footer>
 
     <script src="script.js"></script>
-    <script>
-        function showHome() {
-            document.getElementById('home').style.display = 'block';
-            document.getElementById('about').style.display = 'none';
-            document.getElementById('reports').style.display = 'none';
-            document.getElementById('search').style.display = 'block';
-        }
-
-        function showSection(sectionId) {
-            // Hide all sections first
-            document.getElementById('home').style.display = 'none';
-            document.getElementById('about').style.display = 'none';
-            document.getElementById('reports').style.display = 'none';
-            document.getElementById('search').style.display = 'none';
-
-            // Show the selected section
-            document.getElementById(sectionId).style.display = 'block';
-        }
-    </script>
 </body>
 </html>
