--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
-                <li><a href="#reports">Reports</a></li>
+                <li><a href="reports.html">Reports</a></li> <!-- Added link to Reports page -->
             </ul>
         </nav>
     </header>
@@ -47,7 +47,6 @@
             <div class="suggestions">
                 <ul id="suggestions" class="suggestions-list"></ul>
             </div>
-            <button onclick="fetchESGData()">Search</button>
             <div id="esgResult"></div>
         </section>
 
@@ -55,39 +54,6 @@
         <div id="chartContainer" style="display: none;">
             <canvas id="esgChart" width="400" height="200"></canvas>
         </div>
-
-        <!-- Reports Section -->
-        <section id="reports">
-            <h2>ESG Reports</h2>
-            <div class="report-card">
-                <h3>Sustainalytics ESG Ratings</h3>
-                <p>Provides detailed ESG ratings and reports for various companies.</p>
-                <a href="https://www.sustainalytics.com/esg-ratings" target="_blank">
-                    <button>View Report</button>
-                </a>
-            </div>
-            <div class="report-card">
-                <h3>MSCI ESG Ratings</h3>
-                <p>Offers ESG ratings and research on companies.</p>
-                <a href="https://www.msci.com/sustainable-investing/esg-ratings" target="_blank">
-                    <button>View Report</button>
-                </a>
-            </div>
-            <div class="report-card">
-                <h3>Morningstar Sustainability Ratings</h3>
-                <p>Morningstar provides sustainability ratings for funds and companies.</p>
-                <a href="https://www.morningstar.com/research" target="_blank">
-                    <button>View Report</button>
-                </a>
-            </div>
-            <div class="report-card">
-                <h3>Global Reporting Initiative (GRI)</h3>
-                <p>The GRI provides a framework for sustainability reporting and various company reports.</p>
-                <a href="https://www.globalreporting.org" target="_blank">
-                    <button>View Report</button>
-                </a>
-            </div>
-        </section>
     </main>
 
     <footer>
