--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
+                <li><a href="about.html">About</a></li> 
                 <li><a href="reports.html">Reports</a></li> <!-- Added link to Reports page -->
             </ul>
         </nav>
