--- a/index.html
+++ b/index.html
@@ -14,15 +14,16 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="about.html">About</a></li> 
-                <li><a href="reports.html">Reports</a></li> <!-- Added link to Reports page -->
-            </ul>
-        </nav>
-    </header>
+   <header>
+    <nav>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="about.html">About</a></li> <!-- About button -->
+            <li><a href="reports.html">Reports</a></li> <!-- Reports button -->
+        </ul>
+    </nav>
+</header>
+
 
     <main>
         <!-- Hero Section -->
